--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router": "^3.0.5",
-    "toastr": "^2.1.2"
+    "toastr": "^2.1.2",
+    "universal-cookie": "^2.1.0"
   },
   "devDependencies": {
     "@types/react": "^15.0.27",
